tests/fail/02_undeclared.lang
// ОЖИДАЕТСЯ ОШИБКА: использование необъявленного идентификатора
целое а = 10;
целое б = а + х;
